--- a/_posts/2022-02-26-INMEDIA-無綫-記者質疑新檢測安排-與病毒共存-陳肇始否認.html
+++ b/_posts/2022-02-26-INMEDIA-無綫-記者質疑新檢測安排-與病毒共存-陳肇始否認.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/2_29.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font> 當局昨晚修改多項檢測措施，如快速測試呈陽性人士不需另行核酸檢測覆檢。在下午的疫情記者會上，《無綫新聞》記者質疑，港府的新安排已和傾向「與病毒共存」的國家睇齊，如居家治療、快速檢測等，做法更與「動態清零」矛盾。食衞局局長陳肇始否認，重申目前仍為「早發現、早治療」及圍堵策略，在資源不足下的調整仍會符合該兩項條件，「我哋宜家唔係唔圍堵，而係重點圍堵，更加精準、按疫情實際情況作考慮。」</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/2_29.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>當局昨晚<a href="https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E6%AA%A2%E6%B8%AC%E6%96%B0%E5%AE%89%E6%8E%92-%E5%BF%AB%E6%B8%AC%E9%99%BD%E6%80%A7%E4%B8%8D%E9%9C%80%E8%A6%86%E6%AA%A2-%E7%B6%B2%E4%B8%8A%E7%99%BB%E8%A8%98%E7%95%B6%E7%A2%BA%E8%A8%BA%E5%80%8B%E6%A1%88">修改</a>多項檢測措施，如快速測試呈陽性人士不需另行核酸檢測覆檢。在下午的疫情記者會上，《無綫新聞》記者質疑，港府的新安排已和傾向「與病毒共存」的國家睇齊，如居家治療、快速檢測等，做法更與「動態清零」矛盾。食衞局局長陳肇始否認，重申目前仍為「早發現、早治療」及圍堵策略，在資源不足下的調整仍會符合該兩項條件，「我哋宜家唔係唔圍堵，而係重點圍堵，更加精準、按疫情實際情況作考慮。」</p>
 <p>在記者會上，《無綫》記者發問時質疑，政府近日的防疫措施越見鬆散、大倒退，因為病床及隔離設施不足，便喚市民居家檢疫，及以強制檢測公告取代快速檢測，問當局是否已承認第五波抗疫是否失敗。</p>
 <p>陳肇始沒有正面回答，重申當局目前以分層治療及重點圍堵為策略，包括醫管局採取的隔離措施，如病情較輕的長者會入住社區治療設施，病情較輕的年輕患者則入住社區隔離設施。</p>
 <p>該名記者又指，市民已改用快速檢測，由內地來港的核酸檢測支援隊「可以做到乜嘢呢？係咪單單做全民檢測？」陳肇始回應時表示，當局正籌備全民檢測，內地專家給了不少寶貴意見。</p>
