--- a/_posts/2022-02-26-INMEDIA-已打兩針密切接觸者-檢測陰性最快七日可-放監.html
+++ b/_posts/2022-02-26-INMEDIA-已打兩針密切接觸者-檢測陰性最快七日可-放監.html
@@ -8,9 +8,9 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/1_48.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font> 第五波疫情嚴重，社區隔離設施供不應求。當局今日宣布，已接種兩劑疫苗的密切接觸者，如在隔離第六及第七日的快速測試結果均為陰性，便可以提早完成隔離，包括家居或社區隔離設施。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/1_48.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>第五波疫情嚴重，社區隔離設施供不應求。當局今日宣布，已接種兩劑疫苗的密切接觸者，如在隔離第六及第七日的快速測試結果均為陰性，便可以提早完成隔離，包括家居或社區隔離設施。</p>
 <p><strong>快測陽性網上呈報  平台「仍在全速推行中」</strong></p>
-<p>政府昨晚發稿更新「風險為本」檢測策略，包括快速測試呈陽性人士可網上登記作通報。多名建制派立法會議員不滿當局未有見記者交代。政府今安排食衞局局長陳肇始出席疫情記者會「補鑊」，但陳肇始表示，該網上呈報平台的準備工作「仍在全速推行中」。</p>
+<p>政府昨晚<a href="https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E6%AA%A2%E6%B8%AC%E6%96%B0%E5%AE%89%E6%8E%92-%E5%BF%AB%E6%B8%AC%E9%99%BD%E6%80%A7%E4%B8%8D%E9%9C%80%E8%A6%86%E6%AA%A2-%E7%B6%B2%E4%B8%8A%E7%99%BB%E8%A8%98%E7%95%B6%E7%A2%BA%E8%A8%BA%E5%80%8B%E6%A1%88">發稿</a>更新「風險為本」檢測策略，包括快速測試呈陽性人士可網上登記作通報。多名建制派立法會議員<a href="https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E6%B0%91%E5%BB%BA%E8%81%AF%E8%AD%B4%E8%B2%AC%E6%94%BF%E5%BA%9C%E5%83%85%E7%99%BC%E7%A8%BF%E4%BA%A4%E4%BB%A3%E6%AA%A2%E6%B8%AC%E6%96%B0%E5%AE%89%E6%8E%92-%E6%96%A5%E5%8F%96%E6%B6%88%E5%BC%B7%E6%AA%A2%E3%80%8C%E8%88%87%E7%97%85%E6%AF%92%E5%85%B1%E5%AD%98%E3%80%8D%E7%84%A1%E7%95%B0">不滿</a>當局未有見記者交代。政府今安排食衞局局長陳肇始出席疫情記者會「補鑊」，但陳肇始表示，該網上呈報平台的準備工作「仍在全速推行中」。</p>
 <p>記者問到執行細節，及快速測試如何向僱主申請病假。陳肇始稱「計劃緊係咁樣做」，並強調快速測試的準乘度高。陳肇始又澄清，圍封強檢仍然沿用核酸測試，強制檢測才會使用快速測試。</p>
 <p><strong>建數據庫予患者作病假證明  陳肇始：快測有佢嘅優點</strong></p>
 <p>衞生署署長林文健則認為，快速測試的靈敏度較高，「無嘢快得過你用檢測工具測試到係陽性」，而稍後建立的數據庫同作病假證明。</p>
