--- a/_posts/2022-02-27-INITIUM-早报-fifa维持俄罗斯队参加世界杯外围赛资格-波兰-瑞典和捷克拒绝接受.html
+++ b/_posts/2022-02-27-INITIUM-早报-fifa维持俄罗斯队参加世界杯外围赛资格-波兰-瑞典和捷克拒绝接受.html
@@ -8,8 +8,8 @@ tags: blog
 author: 
 ---
 
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220228-morning-brief/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/02/b5ac80b93d804894a555e79dea02e8b7.jpeg?imageView2/1/w/1080/h/720/format/jpg" alt="2021年11月14日，俄罗斯国家足球队主教练瓦列里·卡尔平（Valeri Karpin）。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2021年11月14日，俄罗斯国家足球队主教练瓦列里·卡尔平（Valeri Karpin）。<span class="credit">摄：Sergei Bobylev/Getty Images</span></figcaption></figure><p><strong>俄罗斯以陆空武力全面入侵乌克兰，<a href="https://theinitium.com/article/20220224-whatsnew-ukraine-russia-war/">端传媒有持续更新的专题报导及信息整理</a>，敬意留意。</strong></p>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220228-morning-brief/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/02/c6da835e419c4d88832cd3401032696b.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2021年6月12日，一名俄罗斯支持者观看一场俄罗斯对比利时的足球赛事的电视直播。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">2021年6月12日，一名俄罗斯支持者观看一场俄罗斯对比利时的足球赛事的电视直播。<span class="credit">摄：Stanislav Krasilnikov/TASS via Getty Images</span></figcaption></figure><p><strong>俄罗斯以陆空武力全面入侵乌克兰，<a href="https://theinitium.com/article/20220224-whatsnew-ukraine-russia-war/">端传媒有持续更新的专题报导及信息整理</a>，敬意留意。</strong></p>
 <h3>FIFA维持俄罗斯队参加世界杯外围赛资格，波兰、瑞典和捷克拒绝接受</h3>
 <p>由于俄罗斯武力入侵乌克兰，波兰、瑞典和捷克足协日前表示，拒绝与俄罗斯队进行卡塔尔世界杯外围赛附加赛。国际足协（FIFA）周日下午就此<a href="https://www.fifa.com/tournaments/mens/worldcup/qatar2022/media-releases/bureau-of-the-fifa-council-takes-initial-measures-with-regard-to-war-in">发表声明</a>，宣布对俄罗斯队采取三项限制措施，希望继续比赛。但波兰、瑞典和捷克足协拒绝接受FIFA的决定。</p>
 <p>FIFA提出三项限制措施包括：</p>
