--- a/_posts/2022-02-28-INMEDIA-中小學3月17日前提早放假-楊潤雄指無計劃要求打針作返學要求.html
+++ b/_posts/2022-02-28-INMEDIA-中小學3月17日前提早放假-楊潤雄指無計劃要求打針作返學要求.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/20220228EDU_0.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>教育局長楊潤雄宣布「提早放暑假」的實際安排，全港中小學不遲於3月17日開始提早放暑假，直至復活節假期結束，之後預計可以恢復面授課，直至8月12日結束學年，並於9月1日再開學。新學年會否要求學生打針才可以返校讀書？楊潤雄表明無打算將打針成為返學條件，只呼籲適齡人士接種。</p>
-<p>因應「提早放暑假」，中一派位自行分配學位將於5月4日公布，中一派位結果改為7月26日公布，小五下學期呈分試延至8月提交。至於復課安排，現時預計幼稚園及小學在復活節假後首先安排面授，中學要待文憑試校畢核心科目後，才能恢復。</p>
+<p>因應「提早放暑假」，中一派位自行分配學位將於5月4日公布，中一派位結果改為7月26日公布，小五下學期呈分試延至8月提交。至於復課安排，現時預計幼稚園及小學在復活節假後首先安排面授，中學要待文憑試考畢核心科目後，才能恢復。</p>
 <p>楊潤雄表示，原則上各學校可以在3月7日開始放特別假，但由於部分學校需要時間安排，家長亦可能需時準備，故彈性容許所有中小學，最遲3月17日開始放假。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/721926" title="E21B27EF-5325-4A16-96FB-ECC21046955D"><img src="https://live.staticflickr.com/65535/51908895286_b15de19c61_z.jpg" width="640" alt="E21B27EF-5325-4A16-96FB-ECC21046955D" /></a></p>
 <p><strong>國際學校維持現狀 被質疑雙重標準</strong></p>
