--- a/_posts/2022-02-28-INMEDIA-民建聯稱禁足為-假消息-促政府仿效警隊兩小時內澄清.html
+++ b/_posts/2022-02-28-INMEDIA-民建聯稱禁足為-假消息-促政府仿效警隊兩小時內澄清.html
@@ -12,9 +12,9 @@ author: 獨媒報導
 <p>梁熙在中午的視像記者會中表示，近日流傳不少「假消息」，包括傳聞立法會將投票通過實施禁足，導致市民搶購食物，指假消息令恐懼情緒蔓延，混亂公共秩序。他又建議政府在每條免費電視頻道加插抗疫特備節目，內容關於病毒檢測、確診者與密切接觸者支援，及患者求診資訊。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/K26aYR" title="無標題"><img src="https://live.staticflickr.com/65535/51908752441_064ff1fd01_z.jpg" width="640" alt="無標題" /></a><br /><em>梁熙</em></p>
 <p><strong>稱港台都要幫手澄清</strong></p>
-<p>陳恒鑌又不點名指，應要好好使用香港電台作為「抗疫電台」，「一有假消息，呢個電台應該第一時間去追蹤同搵政府部門幫手澄清啦。」</p>
+<p>陳恒鑌又不點名指，應要好好使用香港電台<a href="https://www.inmediahk.net/node/%E5%AA%92%E9%AB%94/%E9%82%B1%E9%A8%B0%E8%8F%AF%EF%BC%9A%E6%B8%AF%E5%8F%B0%E5%B0%87%E5%8A%A0%E5%BC%B7%E6%88%90%E7%82%BA%E9%98%B2%E7%96%AB%E9%9B%BB%E5%8F%B0-%E8%91%9B%E7%8F%AE%E5%B8%86%E8%AE%9A%E6%9D%8E%E7%99%BE%E5%85%A8%E6%94%B9%E9%9D%A9%E6%88%90%E5%8A%9F">作為「抗疫電台」</a>，「一有假消息，呢個電台應該第一時間去追蹤同搵政府部門幫手澄清啦」。</p>
 <p>在長遠而言，梁熙要求政府儘快為「假新聞法」立法，並建議參考新加坡與德國做法，賦權政府移除「假消息」及相關帳戶與平台，並對消息發布者處以監禁。他又建議政府加強與學術機構合作，進行事實查證（Fact check）。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/fTh80r" title="無標題"><img src="https://live.staticflickr.com/65535/51909380780_4230d82ece_z.jpg" width="640" alt="無標題" /></a><br /><em>陳恒鑌</em></p>
 <p><strong>倡租用急凍櫃存放遺體</strong></p>
 <p>第五波疫情死亡人數急增，其中<a href="https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E6%98%8E%E6%84%9B%E9%86%AB%E9%99%A2%E6%9C%AA%E5%86%8D%E6%88%B6%E5%A4%96%E6%94%BE%E9%81%BA%E9%AB%94-%E6%83%9F%E7%BA%8C%E6%88%90%E7%AD%89%E5%80%99%E5%8D%80">明愛醫院</a>昨晚更一度將遺體置於戶外。陳恒鑌陳認為政府需要與殯儀業界溝通，並建議衞生署租用急凍櫃臨時存放遺體，亦建議食環署尋找冷藏設施存放遺體。陳恒鑌又建議，透過公私營合作設立專用「快速火化通道」，並由政府開闢地方，讓家屬進行簡單儀式後火化遺體。他強調不可能再依照「常規做法」，需要破除制度上的束縛。</p>
-</div></div></div>
+</div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
