--- a/_posts/2022-02-28-VOCUS-再比較香港與紐西蘭的omicron傳播形態.html
+++ b/_posts/2022-02-28-VOCUS-再比較香港與紐西蘭的omicron傳播形態.html
@@ -12,17 +12,18 @@ author: REDBRIC
 <p>2月初當香港與紐西蘭幾乎同時開始出現Omicron變種的大爆發，本欄在2月9日率先比較了兩地在確診數、死亡數及疫苗接種率等情況 (姚，2022)，當時兩地的每日確診人數只有大約200人，經過了20日的發展，兩地的疫情同樣惡化，每日新增確診人數同樣以指數速度急升，反映Omicron的傳播力在紐港皆同，非因某一地方的獨特因素。</p>
 <h2><strong>兩地每日新增確診人數</strong></h2>
 <p>然而，可能因為數據滯後或定義不同，John Hopkins University CSSE COVID-19 Data 提供給Our World in Data數據庫有關香港的每日確診人數(Daily new confirmed COVID-19 cases)與香港每日公佈的新增確診人數有所不同，如圖1比較兩地的每日新增確診人數，在2月28日紐西蘭的數字上升至14,633宗，與本地公佈的相同，但圖中顯示香港的數據只更新至2月26日，而且確診數只有5,494，遠低於香港本地的公佈數字 (原因未明)，反映國際未必能夠從數據準確了解香港的情況。</p>
+<img alt="圖1 紐西蘭和香港的每日新增確診人數。來源：Our World in Data" src="https://images.vocus.cc/1c603245-fd0b-4f24-a54c-d6031cb2e98b.png">
 <p>圖1 紐西蘭和香港的每日新增確診人數。來源：Our World in Data</p>
 <p>若以Our World in Data的數據為準，則紐西蘭現時確診人數的上升速度比香港的更快，圖2是以百萬人計的7天移動平均數比較兩地的每日新增確診人數，紐西蘭的情況比香港的惡劣三倍多，這與紐西蘭的人口較少有關。兩地似乎仍在疫症快速擴散階段，確診數仍在上升。</p>
+<img alt="圖2 紐西蘭和香港的每日新增確診人數 (每百萬人計的7日移動平均數)。來源：Our World in Data" src="https://images.vocus.cc/0e2a5f86-58b0-4a91-bda5-9dbbaa0dd801.png">
 <p>圖2 紐西蘭和香港的每日新增確診人數 (每百萬人計的7日移動平均數)。來源：Our World in Data</p>
 <h2>兩地的每日檢測數</h2>
 <p>誠然，檢測人數若增加自然會增加確診人數，因此在比較兩地的確診人數時，必須同時比較兩地的檢測人數，圖3(右上)顯示兩地的檢測數，近日香港的檢測人數比紐西蘭的要多得多。右上圖顯示香港的檢測數由1月初的差不多每日每千人檢測18人急增至差不多27人(但數據未有更新至2月尾)，而紐西蘭則仍以每日每千人檢測約5人的速度檢測，不及香港的五份一，反映紐西蘭的檢測確診率比香港的高得多，似乎隱含紐西蘭的染病人數較多。事實上，右下圖顯示紐西蘭的R值已由2月初的1.5上升至2.6，反映疫症的傳播力正在增加 (香港並沒有R值資料)。</p>
-<p>圖3 紐西蘭和香港的每日新增確診人數 (每百蒂人)、新增檢測數，檢測為陽性比率等。來源：Our World in Data</p>
+<img alt="圖3 紐西蘭和香港的每日新增確診人數 (每百萬人)、新增檢測數，檢測為陽性比率等。來源：Our World in Data" src="https://images.vocus.cc/ff6c2ef9-2bce-45a9-88a1-b632eb8fb19e.png">
+<p>圖3 紐西蘭和香港的每日新增確診人數 (每百萬人)、新增檢測數，檢測為陽性比率等。來源：Our World in Data</p>
 <h2>兩地的累計疫症死亡率</h2>
 <p>雖然紐西蘭在每日新增確診人數(根據國際數據)較為嚴重，但在新增死亡人數上香港的近日情況急遽惡化，圖4比較兩地因疫症死亡的累計人數(每百萬人)，香港在2月份的一波疫情中至今已把死亡累計人數由少於30人增至76人(每百萬人)，這情況是在2月9日後才急增，前文並未出現；相反，紐西蘭的情況至今仍能保持較為穩定的水平，值得兩地的研究人員深入研究，分析減低死亡率的因素，包括兩地在疫苗接種率，疫苗有效度，醫療系統壓力和處理確診者方法等，將有助長遠解決疫症危害。</p>
+<img alt="圖4 紐西蘭和香港的每日累計疫症死亡人數(每百萬人)。來源：Our World in Data" src="https://images.vocus.cc/af6cc0fa-ad39-4c17-bde1-84016f3988ba.png">
 <p>圖4 紐西蘭和香港的每日累計疫症死亡人數(每百萬人)。來源：Our World in Data</p>
 <p>參考：</p>
 <p>姚松炎 (2022) 比較香港和紐西蘭的 Omicron 傳播形態，方格子，2月9日。https://vocus.cc/article/62036527fd89780001498ccd</p>
-<p><br></p>
-<p><br></p>
-<p><br></p>
