--- a/_posts/2022-02-28-INMEDIA-青衣方艙醫院落成-林鄭-抗疫首戰嘅勝利.html
+++ b/_posts/2022-02-28-INMEDIA-青衣方艙醫院落成-林鄭-抗疫首戰嘅勝利.html
@@ -10,10 +10,10 @@ author: 獨媒報導
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/win_0.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>第五波疫情確診數字再創新高，大批確診者未能送往隔離設施接受治療。政府今（28日）公佈位於青衣的方艙醫院完工交付，特首林鄭月娥形容屬中國建築團隊為抗疫創造奇蹟及「首戰嘅勝利」；另外，除了現有興建的社區隔離設施外，運房局亦宣佈將徵用2項位於元朗的過渡性房屋作為隔離設施，合共提供多2,500個單位。</p>
 <p><strong>林鄭與陳肇始視察</strong></p>
-<p>青衣的方艙醫院日今完工，林鄭月娥與食物及衞生局局長陳肇始等人今到場視察。林鄭月娥稱方艙醫院在得到中央的支持下在7天內完成，又指中央的建築團隊為香港抗疫工作創造奇蹟，形容「今日係首戰嘅勝利」。</p>
-<p>青衣的方艙醫院設立3900個社區隔離應急床位，隔離設施房內設有冷氣、書桌、檯燈及數個床位，惟沒有獨立廁所，若檢疫人士需要如廁，便需要使用隔離設施的公共廁所。除了青衣的方艙醫院外，現時正興建的社區隔離設施包括落馬洲河套區、元朗潭尾、前新田購物城、洪水橋廈村新發展區。</p>
+<p>青衣的方艙醫院今日完工，林鄭月娥與食物及衞生局局長陳肇始等人今到場視察。林鄭月娥稱方艙醫院在得到中央的支持下在7天內完成，又指中央的建築團隊為香港抗疫工作創造奇蹟，形容「今日係首戰嘅勝利」。</p>
+<p>青衣的方艙醫院設立3,900個社區隔離應急床位，隔離設施房內設有冷氣、書桌、檯燈及數個床位，惟沒有獨立廁所，若檢疫人士需要如廁，便需要使用隔離設施的公共廁所。除了青衣的方艙醫院外，現時正興建的社區隔離設施包括落馬洲河套區、元朗潭尾、前新田購物城、洪水橋廈村新發展區。</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/jEbfUJJF4_Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><p>
 <strong>政府再徵用2幅元朗過渡性房屋項目作隔離用途</strong></p>
-<p>運輸及房屋局指，獲香港聖公會福利協會有限公司及博愛醫院同意，徵用2項分別位於元朗東頭「同心村」及錦田江夏圍第一期的過渡性房屋作為社區隔離設施，提供2500多個單位，可供5000名隔離人士入住。政府早前已徵用皇后山邨皇溢樓、皇澄樓和荔景邨恒景樓，預計將於本週下旬至下週初投入服務。</p>
+<p>運輸及房屋局指，獲香港聖公會福利協會有限公司及博愛醫院同意，徵用2項分別位於元朗東頭「同心村」及錦田江夏圍第一期的過渡性房屋作為社區隔離設施，提供2,500多個單位，可供5,000名隔離人士入住。政府早前已徵用皇后山邨皇溢樓、皇澄樓和荔景邨恒景樓，預計將於本週下旬至下週初投入服務。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/808J2Z" title="1209845"><img src="https://live.staticflickr.com/65535/51909387411_99648d8a6a_z.jpg" width="640" alt="1209845" /></a></p>
-<script async="" src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script></div></div></div>
+<script async="" src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script></div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
