--- a/_posts/2022-02-28-INMEDIA-國際足協容許俄羅斯續參賽-波蘭足總斥不能接受.html
+++ b/_posts/2022-02-28-INMEDIA-國際足協容許俄羅斯續參賽-波蘭足總斥不能接受.html
@@ -10,7 +10,7 @@ author: 獨媒報導
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/diula.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>俄羅斯入侵烏克蘭戰事持續，俄羅斯總統普京更下令核威懾部隊高度戒備，形勢更為未明朗。面對波蘭、瑞典及捷克杯葛參賽，國際足協建議俄羅斯改以「俄羅斯足球聯會」名義參賽，波蘭足協主席Cezary Kulesza 炮轟國際足協的決定不能接受，重申不會與俄羅斯比賽：「不論他們的球隊叫甚麼名字。」</p>
 <p>在下月舉行的世界盃歐洲區外圍賽，俄羅斯與波蘭、瑞典及捷克被編入同一線路，俄羅斯更亨有兩場主場優勢，三國已表明不會與俄作賽。國際足協(FIFA) 在召開董事局特別會議後宣佈，俄羅斯國家隊將改以「俄羅斯足球聯會」名義參賽，但要在中立場地比賽，並禁止播放國歌、展示國旗及安排球迷入場觀賽。</p>
-<p>波蘭足協主席Cezary Kulesza 在社交媒體Twitter 已作最新回應，他炮轟國際足協的決定不能接受，強調沒有興奮參與該場比賽，重申波蘭國家隊的立場不變，「不會和俄羅斯進行任何比賽，不論他們的球隊叫甚麼。」</p>
+<p>波蘭足協主席Cezary Kulesza 在社交媒體Twitter 已作最新回應，他炮轟國際足協的決定不能接受，強調沒有興趣參與該場比賽，重申波蘭國家隊的立場不變，「不會和俄羅斯進行任何比賽，不論他們的球隊叫甚麼。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/w090x5" title="54719681-10557567-image-a-16_1645981551657"><img src="https://live.staticflickr.com/65535/51908051257_107a665624_z.jpg" width="634" alt="54719681-10557567-image-a-16_1645981551657" /></a></p>
 <script async="" src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script><p>
 <strong>利物浦球迷舉烏克蘭國旗：You never walk alone</strong></p>
