--- a/_posts/2022-03-01-INMEDIA-俄烏完成首輪談判未有進展-64公里長俄軍集結基輔.html
+++ b/_posts/2022-03-01-INMEDIA-俄烏完成首輪談判未有進展-64公里長俄軍集結基輔.html
@@ -17,9 +17,9 @@ author: 獨媒報導
 <p>早前成功向SpaceX創辦人馬斯克（Elon Musk）求助，獲提供星鏈（Starlink）衛星系統，讓當地保持網絡連接的烏克蘭副總理兼數字轉型部長費多羅夫（Mykhailo Fedorov），在Twitter上載相片，可見貨車已運送系統的接收器及終端機到當地。<br /><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/00CM34" title="FMtcDMwWUAAg96F"><img src="https://live.staticflickr.com/65535/51911447389_34dcb3ab39_z.jpg" width="480" alt="FMtcDMwWUAAg96F" /></a><em>圖片來源：<a href="https://twitter.com/FedorovMykhailo/status/1498392515262746630">https://twitter.com/FedorovMykhailo/status/1498392515262746630</a><br /></em></p>
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr" xml:lang="en">Starlink — here. Thanks, <a href="https://twitter.com/elonmusk?ref_src=twsrc%5Etfw">@elonmusk</a> <a href="https://t.co/dZbaYqWYCf">pic.twitter.com/dZbaYqWYCf</a></p>
 <p>— Mykhailo Fedorov (@FedorovMykhailo) <a href="https://twitter.com/FedorovMykhailo/status/1498392515262746630?ref_src=twsrc%5Etfw">February 28, 2022</a></p></blockquote>
-<p><strong>俄羅斯入侵烏克蘭事件最新簡要</strong><br />
-＊俄軍大炮擊中烏克蘭阿特赫爾卡（Okhtyrka）一個軍事基地，逾70名士兵陣亡<br />
-＊不少國際企業與俄羅斯保持距離，廸士尼、華納兄弟及索尼皆暫停在俄發行新電影，萬事達卡則禁止部分俄國金融企業使用其系統，Visa亦表示會執行制裁的相關法規，Netflix則表示不會應俄羅斯要求，加入20個國家支持的頻道<br />
+<p><strong>俄羅斯入侵烏克蘭事件最新簡要</strong></p>
+<p>＊俄軍大炮擊中烏克蘭阿特赫爾卡（Okhtyrka）一個軍事基地，逾70名士兵陣亡<br />
+＊不少國際企業與俄羅斯保持距離，迪士尼、華納兄弟及索尼皆暫停在俄發行新電影，萬事達卡則禁止部分俄國金融企業使用其系統，Visa亦表示會執行制裁的相關法規，Netflix則表示不會應俄羅斯要求，加入20個國家支持的頻道<br />
 ＊英國首相約翰遜會到東歐會見波蘭及愛沙尼亞領袖，並探望部署在當地的英軍<br />
 ＊中國宣布從烏克蘭撤僑<br />
 ＊國際刑事法庭將就俄羅斯入侵烏克蘭展開戰爭罪行的調查<br />
