--- a/_posts/2022-03-02-INITIUM-早报-俄罗斯持续攻击乌克兰多个主要城市-联合国大会141国投票谴责.html
+++ b/_posts/2022-03-02-INITIUM-早报-俄罗斯持续攻击乌克兰多个主要城市-联合国大会141国投票谴责.html
@@ -43,7 +43,7 @@ author:
 <p>他表示，将不会要求俱乐部向他偿还据信约20亿美元的贷款。</p>
 <p>他还要求助手成立一个慈善基金会，称会将出售所得净收益投入基金会，为“乌克兰战争的所有受害者”提供帮助。</p>
 <h3>美国上调对香港旅游警示至最高级“不要前往”</h3>
-<p>美国国务院因应香港防疫措施，将香港旅游警示提升至最高第四级，即“不要前往”。中国外交部回应指，香港防疫措措是为了有效防控疫情。</p>
+<p>美国国务院因应香港防疫措施，将香港旅游警示提升至最高第四级，即“不要前往”。中国外交部回应指，香港防疫措施是为了有效防控疫情。</p>
 <p><a href="https://hk.usconsulate.gov/sm-2022030201/">美国国务院在声明中表示</a>，香港和中国内地同样采取“零容忍”防疫政策，这会严重影响旅行和公共服务；某些情况下，儿童若在香港检出阳性，要与父母分开并被隔离，直至符合当地医院要求。美国国务院因此决定，上调香港旅游警示至最高级“不要前往”。</p>
 <p>中国外交部发言人<a href="https://www.fmprc.gov.cn/fyrbt_673021/jzhsl_673025/202203/t20220302_10647272.shtml">汪文斌对此回应指</a>，香港防疫举措是为了有效防控疫情，是必要、科学和负责任的做法。他相信，相关防疫举措会进一步增强国际社会对香港防疫的信心，为国际投资者在香港投资兴业提供更加安全稳定的营商环境。</p>
 <h3>美国前国务卿蓬佩奥访问台湾</h3>
