--- a/_posts/2022-03-02-PQ-俄稱侵烏是為了防-種族滅絕-烏克蘭告上國際法庭破謊言.html
+++ b/_posts/2022-03-02-PQ-俄稱侵烏是為了防-種族滅絕-烏克蘭告上國際法庭破謊言.html
@@ -8,7 +8,11 @@ tags: blog
 author: 王雪俐
 ---
 
-<p>烏克蘭總統澤倫斯基於之前的週日（2 月 27 日）對外表示，俄羅斯宣稱進攻烏克蘭是為了防止烏克蘭的種族滅絕行動，這並非實情，他已經就此向國際法院起訴。路透社報導，國際法院將於下週一、二（3 月 7-8 日）就烏克蘭控訴俄羅斯發動戰爭一案開庭，以決定是否下令採取「臨時措施」中止莫斯科的軍事行動。為此國際法院已經向俄羅斯發出緊急通訊，通知俄羅斯做好準備。&nbsp;</p>
+<p>烏克蘭總統澤倫斯基於之前的週日（2 月 27 日）對外表示，俄羅斯宣稱進攻烏克蘭是為了防止烏克蘭的種族滅絕行動，這並非實情，他已經就此向國際法院（International Court of Justice）提出控訴。路透社報導，國際法院將於下週一、二（3 月 7-8 日）就烏克蘭控訴俄羅斯發動戰爭一案開庭，以決定是否下令採取「臨時措施」中止莫斯科的軍事行動。為此國際法院已經向俄羅斯發出緊急通訊，通知俄羅斯做好準備。 </p>
+
+
+
+<h3>烏克蘭上<meta charset="utf-8">國際法院告俄羅斯誣陷「種族滅絕」</h3>
 
 
 
@@ -24,7 +28,11 @@ author: 王雪俐
 
 
 
-<p>上週五（2 月 25 日）烏克蘭駐美國大使瑪卡羅娃（Oksana Markarova） 對外表示，俄羅斯的入侵行動趨於殘暴，開始攻擊民用基礎設施和醫院，烏克蘭官員開始收集<strong>戰爭罪</strong>證，以便提交給國際法院。</p>
+<h3><meta charset="utf-8">國際刑事法院開始調查俄羅斯戰爭罪證</h3>
+
+
+
+<p>上週五（2 月 25 日）烏克蘭駐美國大使瑪卡羅娃（Oksana Markarova） 對外表示，俄羅斯的入侵行動趨於殘暴，開始攻擊民用基礎設施和醫院，烏克蘭官員開始收集<strong>戰爭罪</strong>證，以便提交給國際刑事法院（International Criminal Court）。國際刑事法院（ICC）3 月 2 日也宣布，開始積極調查發生在烏克蘭平民身上的戰爭罪行。</p>
 
 
 
