--- a/_posts/2022-03-03-INMEDIA-hktvmall疫下人手短缺-需取消部分已付款訂單.html
+++ b/_posts/2022-03-03-INMEDIA-hktvmall疫下人手短缺-需取消部分已付款訂單.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/030333333.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font> 超市搶購潮持續，戰火蔓延至網上購物平台。香港科技探索旗下網購平台HKTVmall今日宣布，由於確診人數急升，前線人手極度短缺，平台「正面對前所未有的營運壓力」，供應商及商戶未能供貨，物流夥伴服務亦被暫停。考慮到政府即將實行全民檢測，以及有機會停工停市及實行禁足安排等，決定取消部份已付款的訂單，會盡量提早通知受影響的客戶。</p>
-<p>HKTVmall企業傳訊部回覆《獨媒》查詢，目前人手不足以維持常規營運。她指平台取消訂單有相關準則，若送貨區域有員工或司機確診，或因供應商無法供貨，訂單將被取消。</p>
+<p>HKTVmall企業傳訊部回覆《獨媒》查詢，員工確診百分比是20%，當中包括送貨員、司機、取貨點門市人員，目前人手不足以維持常規營運。她指平台取消訂單有相關準則，若送貨區域有員工或司機確診，或因供應商無法供貨，訂單將被取消</p>
 <p>平台日前亦在Facebook發帖急聘不同職位人手，日薪最高可達$2000。鄭靜雯表示，每日都有十數人應徵，反應不俗，但由於培訓人手需時數日，難以讓新員工立即投入服務，而且其數目亦無法填補染疫員工人數，加上訂單數目近日急增，故平台仍需調整服務。</p>
 <p>HKTVmall今午仍在Facebook專頁作宣傳，有關外賣直送及生活百貨「HKTVexpress極速送」服務，引起不少網民不滿。有網民在有關帖文下留言，批評平台在上午公布人手不足，下午卻仍宣傳速遞服務，安排混亂。鄭靜雯解釋，極速送服務由第三方速遞公司Zeek負責，派送服務暫時不受影響，若市民選擇有關服務，貨品選擇會較少，但派送速度有機會較快。</p>
 </div></div></div>
