--- a/_posts/2022-03-03-PQ-時代革命-全台正式公映-民團籲-落實港澳條例第18條援港機制.html
+++ b/_posts/2022-03-03-PQ-時代革命-全台正式公映-民團籲-落實港澳條例第18條援港機制.html
@@ -116,7 +116,7 @@ author: 林志鴻
 
 
 
-<p>參考資料：<br>2022/03/03　台灣人權促進會　延續時代革命 台灣援港未竟 落實港澳條例18條援港機制 啟動HF177庇護居留運作</p>
+<p>參考資料：<br>2022/03/03　台灣人權促進會　<a href="https://fb.me/e/1CqRzKLL9" target="_blank" rel="noreferrer noopener">延續時代革命 台灣援港未竟 落實港澳條例18條援港機制 啟動HF177庇護居留運作</a></p>
 
 
 
