--- a/_posts/2022-03-04-INMEDIA-初選47人案-12人因疫情未能上庭-再押4.28提堂.html
+++ b/_posts/2022-03-04-INMEDIA-初選47人案-12人因疫情未能上庭-再押4.28提堂.html
@@ -8,21 +8,21 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/newnewdontdelete-%E5%B7%B2%E4%BF%AE%E5%BE%A9-%E5%B7%B2%E4%BF%AE%E5%BE%A9-%E5%B7%B2%E4%BF%AE%E5%BE%A9-%E5%B7%B2%E4%BF%AE%E5%BE%A9_165.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>47人涉組織及參與民主派初選，被控「串謀顛覆國家政權」罪，僅15人獲准保釋（惟鄒家成早前被撤銷保釋），其餘32名被告還柙至今逾一年。今日是第5次提訊日，乃繼去年11月29日後，47人首度同時於西九龍法院提堂，惟毛孟靜、林卓廷等12人因疫情而未能上庭。懲教署早前首度宣佈，因疫情暫停3月7日至20日的公務探訪，不少律師或未有足夠時間與當事人會面。國安法指定法官、主任裁判官羅德泉終將案件押後至4月28日再提堂。一年前的今日，亦是四日四夜「馬拉松式」聆訊結束的日子。</p>
-<p>另外，總裁判官蘇惠德自去年10月初放病假5個月，於今個星期一復職，處理本案的羅德泉職銜由「署理總裁判官」改為「主任裁判官」。而以往上庭均會問「蘇惠德心臟病好返未」的快必譚得志，今高叫：「蘇惠德個心臟好返啦，恭喜哂佢！」</p>
-<p><strong>12人因疫情缺席 快必：蘇惠德個心臟好返啦，恭喜哂</strong></p>
-<p>今日原定47人同時提堂，惟鍾錦麟、徐子見、毛孟靜、李嘉達、朱凱廸、張可森、尹兆堅、 郭家麒、何桂藍、林卓廷、岑敖暉及李予信12人，因健康問題（health issues）而不適合上庭（unfit to come）。據悉李予信快速測試結果呈陽性。而因疫情緣故，今日正庭只得兩個記者席，其餘記者只能在延伸庭觀看直播。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/newnewdontdelete-%E5%B7%B2%E4%BF%AE%E5%BE%A9-%E5%B7%B2%E4%BF%AE%E5%BE%A9-%E5%B7%B2%E4%BF%AE%E5%BE%A9-%E5%B7%B2%E4%BF%AE%E5%BE%A9_165.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>47人涉組織及參與民主派初選，被控「串謀顛覆國家政權」罪，僅15人獲准保釋（惟鄒家成早前被撤銷保釋），其餘32名被告還柙至今逾一年。今日是第5次提訊日，乃繼去年11月29日後，47人首度同時於西九龍法院應訊，惟毛孟靜、林卓廷等12人因疫情而未能上庭，李予信快速測試結果則呈陽性。懲教署早前首度宣佈，因疫情暫停3月7日至20日的公務探訪，不少律師或未有足夠時間與當事人會面。國安法指定法官、主任裁判官羅德泉終將案件押後至4月28日再提堂。</p>
+<p>另外，總裁判官蘇惠德自去年10月初放病假5個月，於今個星期一復職，處理本案的羅德泉職銜由「署理總裁判官」改為「主任裁判官」。而以往上庭均會問「蘇惠德心臟病好返未」的快必譚得志，今高叫：「蘇惠德嗰心臟好返啦，恭喜晒佢！」</p>
+<p><strong>12人因疫情缺席 快必：蘇惠德個心臟好返啦，恭喜晒</strong></p>
+<p>今日原定47人同時提訊，惟鍾錦麟、徐子見、毛孟靜、李嘉達、朱凱廸、張可森、尹兆堅、 郭家麒、何桂藍、林卓廷、岑敖暉及李予信12人，因健康問題（health issues）而不適合上庭（unfit to come）。據悉李予信快速測試結果呈陽性，其餘被告則正接受檢疫。而因疫情緣故，今日正庭只得兩個記者席，其餘記者只能在延伸庭觀看直播。</p>
 <p>案件原定9時30分開庭，眾被告於10時41分入庭，紛紛向旁聽席揮手。以往上庭均會問「蘇惠德心臟病好返未」的快必譚得志，今高叫「蘇惠德個心臟好返啦，恭喜哂佢」，又大幅度揮手。快必又做出撥頭髮的動作，有人說他頭髮好長，快必便打趣說：「毛哥成功啦，爭取唔駛剪頭髮，多謝毛哥。」囚犯因疫情未能剪頭髮，而長毛曾因男囚犯必須剪短頭髮提終極上訴，獲終審法院裁定勝訴。准保釋的黃子悅則對其他被告做心心和寫信的動作，王百羽雙手放頭做出大心。鄒家成一度說：「寫信返屋企喎。」</p>
-<p>短暫休庭時，有女童高呼：「毛伯伯生日快樂！」長毛梁國雄3月27日65歲生日。吳政亨則高舉一本寫有字的簿與親友交流。長毛太太陳寶瑩湊近被告欄問：「你打針未啊？」有人回應「未打針啊佢」，陳說「盡量打盡量打」，又說「我哋好好，精神好好」。</p>
+<p>短暫休庭時，有女童向3月27日65歲生日的長毛梁國雄高呼：「毛伯伯生日快樂！」吳政亨則高舉一本寫有字的簿與親友交流。</p>
 <p><strong>押4.28再提堂 羅德泉職銜改為「主任裁判官」</strong></p>
 <p>案件今繼續由羅德泉處理，惟自總裁判官蘇惠德去年10月初放病假5個月，並於今個星期一復職後，羅德泉的職銜已由「署理總裁判官」改為「主任裁判官」。</p>
-<p>平時處理此案的署理助理刑事檢控專員羅天瑋今並無出現，由其他律師處理。辯方代表包括資深大律師祁志、許紹鼎，大律師吳靄儀、張耀良、查錫我、黃宇逸、關文渭、石書銘、梁嘉善、James McGowan等。劉頴匡和馮達浚則沒有法律代表。</p>
-<p>懲教早前首度宣佈，因疫情暫停3月7日至20日的公務探訪，不少律師或未有足夠時間與當事人會面。羅德泉終決定將案件押後至4月28日。惟疫情持續，公務探訪能否於3月21日恢復仍是未知數。還柙的被告獲准先離庭，紛紛向親友揮手，有人說「保重」。懲教自2月4日起因疫情暫停親友探訪，並數度延後至3月20日，期間只可送入認可物資兩次，劉頴匡臨走前對咪說：「再入口罩同埋入啲A4嘅信封。」</p>
+<p>平時處理此案的署理助理刑事檢控專員羅天瑋今並無出現，由其他律師處理。辯方代表包括資深大律師祁志、許紹鼎，大律師吳靄儀、張耀良、查錫我、黃宇逸、關文渭、石書銘、梁嘉善、James McGowan 等。劉頴匡和馮達浚則沒有法律代表。</p>
+<p>懲教早前首度宣佈，因疫情暫停3月7日至20日的公務探訪，不少律師或未有足夠時間與當事人會面。羅德泉終決定將案件押後至4月28日，繼續處理交付至高等法院審理的程序。惟疫情持續，公務探訪能否於3月21日恢復仍是未知數。還柙的被告獲准先離庭，紛紛向親友揮手，有人說「保重」。懲教自2月4日起因疫情暫停親友探訪，並數度延後至3月20日，期間只可送入認可物資兩次，劉頴匡臨走前向親友說：「再入口罩同埋入啲A4嘅信封。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/t2nN37" title="C97B6FFB-A146-4BAD-A37E-A6ADBD65DD2C"><img src="https://live.staticflickr.com/65535/51917070064_c824c41657_z.jpg" width="640" alt="C97B6FFB-A146-4BAD-A37E-A6ADBD65DD2C" /></a><br /><em>楊雪盈</em></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/1M507F" title="73AF15EC-21F6-4C38-A0A7-A2CC9635540B"><img src="https://live.staticflickr.com/65535/51915775732_d0f6a2cc9a_z.jpg" width="640" alt="73AF15EC-21F6-4C38-A0A7-A2CC9635540B" /></a><br /><em>柯耀林</em></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/9d9089" title="7DBB9D24-AE5D-4F7A-83E8-917EB3AE69AB"><img src="https://live.staticflickr.com/65535/51917363675_d21ac559d4_z.jpg" width="640" alt="7DBB9D24-AE5D-4F7A-83E8-917EB3AE69AB" /></a><br /><em>余慧明</em></p>
 <p><strong>准保釋被告每周到警署報到次數獲准減少</strong></p>
-<p>至於獲准保釋的鄭達鴻、楊雪盈、劉偉聰、呂智恆、林景楠、彭卓棋、何啟明、黃碧雲、施德來、柯耀林、李予信、余慧明、陳志全及黃子悅14人，辯方因疫情嚴重，申請將每周到警署報到的次數，由三至四次減到一至兩次，黃子悅則由每日報到減至每周三次，獲羅德泉批准，其餘保釋條件則維持。</p>
+<p>至於獲准保釋的鄭達鴻、楊雪盈、劉偉聰、呂智恆、林景楠、彭卓棋、何啟明、黃碧雲、施德來、柯耀林、李予信、余慧明、陳志全及黃子悅14人，辯方因疫情嚴重，申請將每周到警署報到的次數，由三至四次減到一至兩次，黃子悅則由每日報到減至每周三次，獲羅德泉批准，其餘保釋條件則維持不變。</p>
 <p>本案去年3月1日首度提堂，原定去年7月8日進行交付程序，惟兩度押後至9月23日及11月29日，期間獲准保釋的被告曾兩度被要求赴灣仔警察總部領取過萬頁文件。《獨媒》去年11月得悉，律政司擬以仍需時準備文件和翻譯為由，申請將案件押後至今年2月7日才提訊，惟羅德泉發信拒絕，要求控方11月29日如期聆訊，惟案件再度押後至今年2月8日及3月4日。</p>
 <p>47名被告依次為：港大法律學院前副教授戴耀廷（56歲）、前立法會議員區諾軒（33歲）、前東區區議員趙家賢（35歲）、前西貢區議員鍾錦麟（32歲）、吳政亨（42歲）、前南區區議員袁嘉蔚（27歲）、前中西區區議員梁晃維（23歲）、前東區區議員鄭達鴻（32歲）、前東區區議員徐子見（53歲）、前灣仔區議會主席楊雪盈（34歲）、前南區區議員彭卓棋（26歲）、前沙田區議員岑子杰（33歲）、前立法會議員毛孟靜（64歲）、前深水埗區議員何啟明（32歲）、馮達浚（25歲）、大律師劉偉聰（53歲）、前立法會議員黃碧雲（61歲）、劉澤鋒（24歲）、前香港眾志秘書長黃之鋒（24歲）、前立法會議員譚文豪（45歲）、前觀塘區議員李嘉達（29歲）、人民力量副主席譚得志（49歲）、前立法會議員胡志偉（58歲）、前黃大仙區議員施德來（38歲）、前立法會議員朱凱廸（43歲）、前屯門區議員張可森（27歲）、嶺南大學學生黃子悅（23歲）、前元朗區議員伍健偉（25歲）、前立法會議員尹兆堅（51歲）、前立法會議員郭家麒（59歲）、前職工盟主席吳敏兒（50歲）、前荃灣區議員譚凱邦（40歲）、立場新聞前記者何桂藍（30歲）、劉頴匡（27歲）、前立法會議員楊岳橋（39歲）、前立法會議員陳志全（48歲）、鄒家成（24歲）、前立法會議員林卓廷（43歲）、前立法會議員范國威（54歲）、社工呂智恆（38歲）、前立法會議員梁國雄（64歲）、阿布泰國生活百貨創辦人林景楠（32歲）、前西貢區議員柯耀林（49歲）、前荃灣區議員岑敖暉（27歲）、前元朗區議員王百羽（30歲）、前東區區議員李予信（27歲）及醫管局員工陣線前主席余慧明（33歲），同被控一項「串謀顛覆國家政權」罪。</p>
 <p>控罪指，47人在2020年7月1日至2021年1月7日，在香港一同串謀及與其他人串謀，旨在顛覆國家政權而組織、策劃、實施或者參與實施，以威脅使用武力或其他非法手段，即：</p>
@@ -35,4 +35,4 @@ author: 獨媒報導
 <p>四、承諾或同意在該選舉中當選後，及/或煽動、促使、引致、誘使他人在該選舉中當選後，故意或蓄意不履行，或故意或蓄意疏於履行其立法會議員職責，即擁護《基本法》，效忠中華人民共和國香港特別行政區，盡忠職守，遵守法律，廉潔奉公，為香港特別行政區服務；</p>
 <p>嚴重干擾、阻撓、破壞香港特別行政區政權機關依法履行職能的行為。</p>
 <p>案件編號：WKCC813/2021</p>
-</div></div></div>
+</div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
