--- a/_posts/2022-03-03-INITIUM-早报-乌克兰最大核电厂站区着火-核设备暂时不受影响.html
+++ b/_posts/2022-03-03-INITIUM-早报-乌克兰最大核电厂站区着火-核设备暂时不受影响.html
@@ -10,7 +10,7 @@ author:
 
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220304-morning-brief/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/03/a4e980a779b54437bb3181f47000e97d.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="乌克兰扎波罗热的核电站发生火灾。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">乌克兰扎波罗热的核电站发生火灾。<span class="credit">图：影片截图</span></figcaption></figure><h3>最新：乌克兰最大核电厂站区着火，核设备暂时不受影响</h3>
-<p>当地时间3月4日早上8点多，俄乌在位于Energodar的Zaporizhzhia核电站附近交火，导致核电站站区内的一栋外部建筑着火。乌克兰外交部长Dmytro Kuleba指俄军“全面开火、情况危急”“若该核电站出事威力将超出切尔诺贝利十倍”。</p>
+<p>当地时间3月3日深夜，俄乌在位于Energodar的Zaporizhzhia核电站附近交火，导致核电站站区内的一栋外部建筑着火。乌克兰外交部长Dmytro Kuleba指俄军“全面开火、情况危急”“若该核电站出事威力将超出切尔诺贝利十倍”。</p>
 <p><a href="https://www.power-technology.com/projects/zaporizhzhya-nuclear-power-plant/">Zaporizhzhia核电站</a>是乌克兰最大的核电站，供电量占四座仍在运作的核电站的40%，提供乌克兰全年1/5的电力。国际原子能组织IAEA警告，若核反应堆被击中，将造成严重后果。</p>
 <p>外部建筑着火后，核电站的几个反应炉陆续关闭，乌克兰当局表示目前的核设备安全、没有受到火警影响，当地的核辐射水平也在正常范围内。</p>
 <p>有分析强调，从核电站本身设计上看，Zaporizhzhia核电站<a href="https://www.aljazeera.com/news/2022/3/3/russia-ukraine-zelenskyy-urges-putin-to-sit-down-for-talks-liveblog">应该不会发生</a>像切尔诺贝利事件那样的爆炸。不过如果核废料堆被击中，就会引发多重后果、甚至堪比切尔诺贝利。该分析指，在讨论后果时，要留意“击中了哪里及引发了什么”。</p>
