--- a/_posts/2022-03-03-INMEDIA-照護食-助吞嚥困難者有啖好食.html
+++ b/_posts/2022-03-03-INMEDIA-照護食-助吞嚥困難者有啖好食.html
@@ -20,7 +20,7 @@ author: 香港社會服務聯會
 <p>「照護食」是專為吞嚥困難人士而設的飲食，透過各種烹調及處理方法，調整食物的形態和軟硬程度、飲品的杰度，以配合不同程度吞嚥困難人士的需要。但照護食並不是吞嚥困難人士的專利，你我也有機會因患病或牙齒出現問題而需要進食一些較易咀嚼的食物，這些食物也可界定為「照護食」。「照護食」顧名思義結合了「照顧」、「愛護」和「美食」多方面的含意，讓吞嚥困難患者在愛與關懷的大前提之下，「有啖好食」。社聯自2017年起致力推廣照護食，透過舉辦多項公眾教育活動，促進業界交流，增加公眾對照護食的認識，推動本地照護食市場發展。</p>
 <p><strong>盼照護食在社區普及</strong></p>
 <p>社聯社會企業商務中心主管譚穎茜表示，在各界夥伴努力下，照護食近年已成為關注吞嚥問題人士的熱門議題，相關的資訊、產品與服務如雨後春筍般湧現，「過往關注照護食級別的，集中在院舍層面的同工，但近年公眾人士包括患者本身及照顧者，對照護食的認識亦大大提高，證明社聯過去幾年在照護食的工作，取得初步正面成效。」她感謝嘉里集團的支持與贊助，讓社聯得以銳意發展照護食，肩負推進者的角色，連結及協調不同界別，推動本地照護食發展。</p>
-<p><em>社聯透過舉辦「食得喜」樂齡美食烹飪大賽等多項活動，促進業界交流，同時增加公眾對照護食的認識。</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4DNEx7" title="無標題"><img src="https://live.staticflickr.com/65535/51917679708_50a5bbbbf5_c.jpg" width="800" alt="無標題" /></a><br /><em>社聯透過舉辦「食得喜」樂齡美食烹飪大賽等多項活動，促進業界交流，同時增加公眾對照護食的認識。</em></p>
 <p>譚穎茜透露將與社企餐廳合作，嘗試在社區上供應照護食菜式，推出試驗計劃，安排社企製作照護食餐膳，再經地區中心派發照護食予市民享用。她期望，照護食可以普及至社區，讓每一位吞嚥困難患者可以容易買到、吃到。她又強調，照護食不只講求烹調技巧，更重要是懷有一顆關愛的心，了解患者的真正需要，讓每位患者「餐餐食得『喜』」。</p>
 <p>「照護食一站通」<a href="https://www.carefood.org.hk">網站</a><br />
 閱讀<a href="https://www.hkcss.org.hk/upload/cc/issue74_ebook.pdf">新一期《社情》照護食專題</a></p>
