--- a/_posts/2022-03-04-PQ-龐培歐來台進行專題演講-美國應承認台灣是主權獨立國家.html
+++ b/_posts/2022-03-04-PQ-龐培歐來台進行專題演講-美國應承認台灣是主權獨立國家.html
@@ -48,6 +48,10 @@ author: 霍布斯潘
 
 
 
+<figure class="wp-block-image size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/03/8503456b-螢幕擷取畫面-2022-03-05-135302.png" alt="" class="wp-image-93871" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/03/8503456b-螢幕擷取畫面-2022-03-05-135302.png 782w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/8503456b-螢幕擷取畫面-2022-03-05-135302-300x163.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/8503456b-螢幕擷取畫面-2022-03-05-135302-768x418.png 768w" sizes="(max-width: 782px) 100vw, 782px" /><figcaption>龐培歐（Mike Pompeo）2022 / 03 / 04 臉書</figcaption></figure>
+
+
+
 <p>龐培歐強調，這不是說台灣未來是否要獨立的事情，而是承認一個早就存在的既存事實，即使台灣過去和現任的領導人都說台灣沒有要宣布獨立，因為台灣已經是一個獨立的國家，他的名字就是中華民國，美國的人民與政府應該承認，這個道德上、道理上，都無比簡單的事實，承認他的政治外交與主權。</p>
 
 
