--- a/_posts/2022-03-05-INMEDIA-禁足將至-銅鑼灣周末人潮疏落.html
+++ b/_posts/2022-03-05-INMEDIA-禁足將至-銅鑼灣周末人潮疏落.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/a1_2.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>政府疑於3月23日至4月3日實施全民強制檢測，期間需禁足。離禁足尚有三星期，以往周未人流興旺的銅鑼灣，人流明顯減少。SOGO對出過馬路的人群大減，多間廣場亦人潮疏落，只有零星市民購物，也有不少商舖無開門營業。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/a1_2.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>政府擬在實施全民強制檢測期間作有限度禁足，同時今日確診數字回落至3萬多宗。然而向來人流興旺的銅鑼灣，今個周末人流明顯減少。SOGO對出過馬路的人群大減，多間廣場亦人潮疏落，只有零星市民購物，也有不少商舖無開門營業。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/coX83z" title="無標題"><img src="https://live.staticflickr.com/65535/51919667170_973fa0ea73_z.jpg" width="640" alt="無標題" /></a></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/rCk7n7" title="無標題"><img src="https://live.staticflickr.com/65535/51919419084_38dedba2e8_z.jpg" width="640" alt="無標題" /></a></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/20sv83" title="無標題"><img src="https://live.staticflickr.com/65535/51918122797_d4a10d7f9c_z.jpg" width="640" alt="無標題" /></a></p>
