--- a/_posts/2022-03-05-INMEDIA-無確診八旬長者滯留亞博-投訴25日無沖過涼-需在房內用便壺如廁.html
+++ b/_posts/2022-03-05-INMEDIA-無確診八旬長者滯留亞博-投訴25日無沖過涼-需在房內用便壺如廁.html
@@ -17,4 +17,5 @@ author: 獨媒報導
 <p>阿Win慨嘆指，父親一直「正常、行得走得、是個樂觀的人」，現時卻只能躺於床上，父親曾向她表示「好唔舒服」，她亦發現父親意志消沉、「瘦咗，講嘢無氣無力」。阿Win認為局方及院舍應儘快安排無確診長者返回院舍，並應跟進及改善無確診隔離人士的衛生及膳食問題。</p>
 <p><strong>醫管局：相關長者隔離安排由社署運作</strong></p>
 <p>《獨媒》記者在昨日下午的疫情記者會上詢問有關情況，醫管局總行政經理李立業表示，相關長者隔離安排由社署運作，手頭上無任何資料。</p>
+<p>社署回覆《獨媒》指，護理員每天早晚均會為院友進行面部及口腔清潔，並會定時為院友抹身及更換紙尿片。社署特別提到，為防止沐浴過程中病毒透過霧化增加交叉感染的機會，即使設有沐浴設施，護理員亦只會按醫護人員的指示為有需要的人士洗澡。而有關接返院舍的安排，則是按照醫護人員認為院舍條件許可，才會安排接返院舍。</p>
 </div></div></div>
