--- a/_posts/2022-03-06-PQ-韓國總統大選戰報-兩個壞蘋果選一個-治療禿頭-也是政策.html
+++ b/_posts/2022-03-06-PQ-韓國總統大選戰報-兩個壞蘋果選一個-治療禿頭-也是政策.html
@@ -76,13 +76,13 @@ author: 陳怡菱
 
 <figure class="wp-block-embed is-type-video is-provider-youtube wp-block-embed-youtube wp-embed-aspect-16-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
 <iframe loading="lazy" title="[이재명 대통령 후보 공식 로고송] 아모르파티" src="https://www.youtube.com/embed/Rbfw6FIc0u0?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div><figcaption>李在明的官方 Logo song 改編自韓國演歌歌手金蓮子的 amor fati。李在明陣營共推出 10 首 Logo song。歌詞中也提到治療禿頭和植牙補助的政見。<a href="https://www.youtube.com/results?search_query=%EC%9D%B4%EC%9E%AC%EB%AA%85+%EA%B3%B5%EC%8B%9D%EB%A1%9C%EA%B3%A0%EC%86%A1" title="https://www.youtube.com/results?search_query=%EC%9D%B4%EC%9E%AC%EB%AA%85+%EA%B3%B5%EC%8B%9D%EB%A1%9C%EA%B3%A0%EC%86%A1" target="_blank" rel="noreferrer noopener">點這裡聽全曲</a>（3/8下架）</figcaption></figure>
+</div><figcaption>李在明的官方 Logo song 改編自韓國演歌歌手金蓮子的 amor fati。李在明陣營共推出 10 首 Logo song。歌詞中也提到治療禿頭和植牙補助的政見。<a href="https://www.youtube.com/results?search_query=%EC%9D%B4%EC%9E%AC%EB%AA%85+%EA%B3%B5%EC%8B%9D%EB%A1%9C%EA%B3%A0%EC%86%A1" title="https://www.youtube.com/results?search_query=%EC%9D%B4%EC%9E%AC%EB%AA%85+%EA%B3%B5%EC%8B%9D%EB%A1%9C%EA%B3%A0%EC%86%A1" target="_blank" rel="noreferrer noopener">點這裡聽全曲</a>（3/8 可能會下架）</figcaption></figure>
 
 
 
 <figure class="wp-block-embed is-type-video is-provider-youtube wp-block-embed-youtube wp-embed-aspect-16-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
 <iframe loading="lazy" title="[기호2번 윤석열] 공식로고송 - 찐이야" src="https://www.youtube.com/embed/EIVyNtc2QOs?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div><figcaption>改編自韓國演歌歌手朴永卓的貨真價實。尹錫悅陣營共推出 15 首 Logo song。歌詞提到在最近這個艱難的世界中，可以信賴的是尹錫悅，是人民所選、所期望的候選人。<a href="https://yoonlove.com/news/8" target="_blank" rel="noreferrer noopener">點這裡聽全曲</a>（3/8下架）</figcaption></figure>
+</div><figcaption>改編自韓國演歌歌手朴永卓的貨真價實。尹錫悅陣營共推出 15 首 Logo song。歌詞提到在最近這個艱難的世界中，可以信賴的是尹錫悅，是人民所選、所期望的候選人。<a href="https://www.youtube.com/playlist?list=PLr2Dyu9W0dUzeL_FxIwj_wSuINJLOYX_-" target="_blank" rel="noreferrer noopener">點這裡聽全曲</a>（3/8下架）</figcaption></figure>
 
 
 
