--- a/_posts/2022-03-07-INMEDIA-快測陽性登記平台終開通-暫無須上載照片-登記後需截圖做證.html
+++ b/_posts/2022-03-07-INMEDIA-快測陽性登記平台終開通-暫無須上載照片-登記後需截圖做證.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/newnewdontdelete-%E5%B7%B2%E4%BF%AE%E5%BE%A9-%E5%B7%B2%E4%BF%AE%E5%BE%A9-%E5%B7%B2%E4%BF%AE%E5%BE%A9-%E5%B7%B2%E4%BF%AE%E5%BE%A9_171.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>供市民登記快速測試呈陽性的網上平台，今日傍晚6時開通。系統運作首半小時大致順暢，雖一度顯示有逾萬人正等候申報，但平台顯示等待時間平均為數分鐘，之後即可載入頁面，《獨媒》記者實測後已成功登記。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/newnewdontdelete-%E5%B7%B2%E4%BF%AE%E5%BE%A9-%E5%B7%B2%E4%BF%AE%E5%BE%A9-%E5%B7%B2%E4%BF%AE%E5%BE%A9-%E5%B7%B2%E4%BF%AE%E5%BE%A9_171.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>供市民登記快速測試呈陽性的<a href="https://www.chp.gov.hk/ratp/">網上平台</a>，今日傍晚6時開通。系統運作首半小時大致順暢，雖一度顯示有逾萬人正等候申報，但平台顯示等待時間平均為數分鐘，之後即可載入頁面，《獨媒》記者實測後已成功登記。</p>
 <p><strong>可選是否需優先入住隔離設施</strong></p>
 <p>登記人需填寫中英文姓名、性別、出生日期、身份證號碼、護照號碼、聯絡電話、住址、職業、工作地址等個人資料，並提供已接種疫苗劑數、快速測試結果日期、病徵、家居狀況、同住人士資料等。登記人可選擇是否「居住狀況非常擠逼，例如劏房、多人同住的板間房或籠屋」，以及是否為「不能自我照顧人士」或「免疫力低人士」等，而需優先安排入住隔離設施。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/99o7V3" title="Screen Shot 2022-03-07 at 6.28.33 PM"><img src="https://live.staticflickr.com/65535/51924139370_5194177be0_z.jpg" width="640" alt="Screen Shot 2022-03-07 at 6.28.33 PM" /></a></p>
