--- a/_posts/2022-03-06-PQ-俄烏第二輪談判僅建立人道走廊-隨後俄羅斯攻下核電廠.html
+++ b/_posts/2022-03-06-PQ-俄烏第二輪談判僅建立人道走廊-隨後俄羅斯攻下核電廠.html
@@ -22,11 +22,11 @@ author: 王雪俐
 
 
 
-<figure class="wp-block-image size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/03/6cc71a9d-俄羅斯表示會在馬立波與沃爾諾瓦哈停火並開設人道走廊（圖／中央社）.png" alt="" class="wp-image-93962" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/03/6cc71a9d-俄羅斯表示會在馬立波與沃爾諾瓦哈停火並開設人道走廊（圖／中央社）.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/6cc71a9d-俄羅斯表示會在馬立波與沃爾諾瓦哈停火並開設人道走廊（圖／中央社）-300x225.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/6cc71a9d-俄羅斯表示會在馬立波與沃爾諾瓦哈停火並開設人道走廊（圖／中央社）-768x576.png 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>俄羅斯表示會在馬立波與沃爾諾瓦哈停火並開設人道走廊（圖／中央社）</figcaption></figure>
-
-
-
 <p>然而就在第二輪談判結束隔天（3 月 4 日），俄軍突然在清晨時分攻擊烏克蘭札波羅熱（Zaporizhzhia）核能發電廠，烏克蘭國家原子能監管監察局（SNRI）在聲明中證實，1 號反應堆的隔間輔助建築已損壞，但電廠的六個反應堆保持完好。烏克蘭核電經營商 Energoatom 的負責人 Petro Kotin 在 Telegram 上表示，俄軍進入核電站並取得控制。<meta charset="utf-8">位於維也納的國際原子能總署（IAEA）署長葛羅西（Rafael Mariano Grossi）表示，俄羅斯飛彈是擊中了一棟培訓中心，而不是六個反應堆中的其一。</p>
+
+
+
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/03/2fdc9011-俄烏戰爭人道走廊（圖／google-map）-1024x635.png" alt="" class="wp-image-94039" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/03/2fdc9011-俄烏戰爭人道走廊（圖／google-map）-1024x635.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/2fdc9011-俄烏戰爭人道走廊（圖／google-map）-300x186.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/2fdc9011-俄烏戰爭人道走廊（圖／google-map）-768x476.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/2fdc9011-俄烏戰爭人道走廊（圖／google-map）.png 1294w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>俄烏戰爭人道走廊（圖／Google map）</figcaption></figure>
 
 
 
