--- a/_posts/2022-03-09-INMEDIA-消委會接48宗快速測試包投訴涉近5萬元-設搜查器供市民查認可名單.html
+++ b/_posts/2022-03-09-INMEDIA-消委會接48宗快速測試包投訴涉近5萬元-設搜查器供市民查認可名單.html
@@ -24,5 +24,6 @@ author: 獨媒報導
 <p><strong>籲商家調整價錢時履行社會責任 並主動提交資料</strong></p>
 <p>被問到現時沒有法例規管，會否增加監管難度，黃解釋指現時沒有發牌及認可制度，因此需視乎商戶有沒有提交資料以列入名單。她又指，若立法的話需時，亦需要檢視，因此呼籲商家若想提供信心保證，應主動提交資料。</p>
 <p>林又呼籲，商家應該體察民情，現時市民大量搶購快測包，導致價錢上漲，他建議商家在調整價錢時應履行社會責任。他又指由於新冠病毒有可能再出現變種，從而影響快測包的性能，故建議巿民不宜囤積。他亦表示現時物資充足，呼籲市民理性冷靜，不要「人買我買」，避免製造不必要恐慌。</p>
+<p>快速抗原測試包認可名單搜尋器：<a href="https://www.consumer.org.hk/tc/rapid_antigen_test_search">https://www.consumer.org.hk/tc/rapid_antigen_test_search</a></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/304246" title="快速抗原測試包認可名單搜尋器"><img src="https://live.staticflickr.com/65535/51926246882_13b9137559_z.jpg" width="640" alt="快速抗原測試包認可名單搜尋器" /></a><em>快速抗原測試包認可名單搜尋器</em></p>
 </div></div></div>
