--- a/_posts/2022-03-09-INMEDIA-戴偉浚遭欠薪要求中國足協仲裁-內地記者-太多類似遭遇球員.html
+++ b/_posts/2022-03-09-INMEDIA-戴偉浚遭欠薪要求中國足協仲裁-內地記者-太多類似遭遇球員.html
@@ -11,5 +11,5 @@ author: 獨媒報導
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/dai25.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>在香港出生的國足球員戴偉浚，爆出遭其效力的中超球會深圳隊已欠薪至少6個月。一直有傳戴偉浚獲另一中超球會上海海港睇中，但他和深圳隊仍有合約，他已向中國足協申請仲裁自由身。內地體育記者林本劍在新浪微博表示，中國足協不太可能判自由身，認為和戴偉浚類似遭遇的球員有太多，「如果判了戴偉浚自由身，可能現有中超一半左右球員就得是自由身，那就更亂了」。</p>
 <p>深圳隊隨隊記者程文莉前日在新浪微博表示，接獲球員罷操的訊息，其後向球會了解，發現欠薪情況已超出其預料之內。程文莉又指有球員無奈地表示，由於中國足球環境欠佳，加上國足成績差勁，「想正當討薪的底氣也沒有了，感覺討薪消息爆出去，被罵的還是我們」。</p>
 <p>佳兆業集團在2016年入主深圳隊，曾大灑金錢增兵，但佳兆業去年11月曾傳出其擔保的離岸債務產品出現逾期兌付、現金流緊張。據了解，深圳隊自去年10月起已出現欠薪，22歲的戴偉浚年薪為130萬元人民幣，他今年獲選入國足，並在對日本和越南的賽事中上陣。程文莉認為，戴偉浚出生在香港，11歲時到英國，一直接受的是「法制教育」，只能採用這種方式維權。</p>
-<p>另一記者李璇則指，戴偉浚可按國際足協規定「維護自身權益」，但認為不是深圳隊的事，指協助戴偉浚落戶是「深圳市」的動作，而因為轉了會籍，才能代表國家隊出戰，所以估計事情沒有那麼簡單。戴偉浚日前已提早到達海南省海口，參與國足訓練營，備戰月底對沙地阿拉伯及阿曼的世界盃外圍賽賽事。</p>
+<p>另一記者李璇則指，戴偉浚可按國際足協規定「維護自身權益」，但認為不是深圳隊的事，指協助<a href="https://www.inmediahk.net/node/%E9%AB%94%E8%82%B2/%E6%88%B4%E5%81%89%E6%B5%9A%E9%A6%96%E9%9A%A8%E5%9C%8B%E8%B6%B3%E5%BE%81%E6%88%B0-%E6%9C%9B%E9%87%8D%E8%BF%94%E6%AD%90%E6%B4%B2%EF%BC%9A%E4%B8%8D%E4%BB%8B%E6%84%8F%E6%AC%A1%E7%B4%9A%E8%81%AF%E8%B3%BD%E8%B5%B7%E6%AD%A5">戴偉浚</a>落戶是「深圳市」的動作，而因為轉了會籍，才能代表國家隊出戰，所以估計事情沒有那麼簡單。戴偉浚日前已提早到達海南省海口，參與國足訓練營，備戰月底對沙地阿拉伯及阿曼的世界盃外圍賽賽事。</p>
 </div></div></div>
