--- a/_posts/2022-03-09-INITIUM-早报-韩国在野党尹锡悦当选总统-主张废除女性家族部-对华强硬.html
+++ b/_posts/2022-03-09-INITIUM-早报-韩国在野党尹锡悦当选总统-主张废除女性家族部-对华强硬.html
@@ -10,7 +10,7 @@ author:
 
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220310-morning-brief/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/03/29c9a318e63a4e449e940aeed8d17d02.jpeg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年3月10日，韩国首尔，主要在野党国民力量候选人尹锡悦赢得总统大选。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2022年3月10日，韩国首尔，主要在野党国民力量候选人尹锡悦赢得总统大选。<span class="credit">摄：Lee Jin-Man/Getty Images</span></figcaption></figure><h3>韩国在野党尹锡悦当选总统，主张废除女性家族部，对华强硬</h3>
-<p>韩国大选计票结果显示，最大在野党国民力量候选人<a href="https://cn.yna.co.kr/view/ACK20220310001300881?section=politics/index">尹锡悦当选第20届总统</a>。他将于5月10日宣誓就职。韩国总统任期五年，不得连任。</p>
+<p>韩国大选计票结果显示，最大在野党国民力量候选人<a href="https://cn.yna.co.kr/view/ACK20220310001300881?section=politics/index">尹锡悦当选第20届总统</a>。他预定将于5月9日宣誓就职。韩国总统任期五年，不得连任。</p>
 <p>执政党共同民主党候选人李在明已承认败选。尹锡悦得票率为48.6%，领先李在明约0.8个百分点。另一名进步主义政党正义党候选人沈相奵获得了2.5%的选票。本次大选最终投票率为77.1%。</p>
 <p>尹锡悦现年61岁，毕业于首尔大学法学系，曾任韩国多地检察官，2019年7月至去年3月担任韩国检察总长。在去年7月30日加入国民力量之前，尹锡悦没有从政经历。</p>
 <p>本次韩国大选中，<a href="https://theinitium.com/article/20220308-international-south-korea-election-feminism/">性别议题受到极大关注</a>。尹锡悦主张废除主要负责妇女政策综合规划和协调工作的女性家族部，认为该机构的存在是一种“反向的性别歧视”。他还提出要“加强对性犯罪诬告罪的处罚”，这些主张令他获得了更多韩国年轻男性的支持。</p>
