--- a/_posts/2022-03-10-INMEDIA-前烏克蘭隊長拒表態續任俄超球隊助教-烏足協譴責兼紀律處分.html
+++ b/_posts/2022-03-10-INMEDIA-前烏克蘭隊長拒表態續任俄超球隊助教-烏足協譴責兼紀律處分.html
@@ -11,6 +11,7 @@ author: 獨媒報導
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/anatoliy.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>俄羅斯入侵烏克蘭的戰事近兩星期，烏克蘭足協昨日發<a href="https://en.uaf.ua/article/44552">聲明</a>，譴責烏克蘭前國家隊隊長、上陣記錄保持者泰摩斯卓克（Anatoliy Tymoshchuk），並要求當局作紀律處分，原因是因為他保持沉默，兼繼續出任俄超球隊辛尼特助教的職務，違反道德規範和公平競技條例。</p>
 <p>烏克蘭足協已要求，取消該國向泰摩斯卓克發出的Pro 級教練執照，並將他從國家隊球員的官立登記冊中剔除，同時褫奪所有在烏克蘭得到的獎項和榮譽，及當地比賽的獲獎頭銜。</p>
 <p>42歲的泰摩斯卓克在烏克蘭北部城市盧斯科（Lutsk）出生，在家鄉球隊出道，先後效力薩克達、辛尼特、拜仁慕尼黑等球隊為拜仁在2012至2013年球季取得三冠王的成員。泰摩斯卓克在2000至2016年間曾代表烏克蘭上陣144場，並在2016年歐洲國家盃決賽週比賽中任隊長；及三度當選烏克蘭足球先生，掛靴後自2017年起出任辛尼特的助教。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/aBcLQK" title="螢幕截圖 2022-03-10 下午12.24.47"><img src="https://live.staticflickr.com/65535/51929763734_aa99f8ee06_b.jpg" alt="螢幕截圖 2022-03-10 下午12.24.47" /></a><br /><em>辛尼特網站顯示泰摩斯卓克仍為球隊助教</em></p>
 <p>烏克蘭足協炮轟泰摩斯卓克「有意識地選擇」留在辛尼特，損害烏克蘭足球的形象，並在聲明中表示，其曾效力的拜仁亦有發表聲明支持烏克蘭，但泰摩斯卓克卻繼續為侵略者的球會工作。</p>
 <p>跟泰摩斯卓克屬於同期，同為烏克蘭2016年歐洲國家盃決賽週成員的前利物浦球員禾路連，早在3月初已辭任同為俄超球隊，莫斯科戴拿模助教的職務。</p>
 </div></div></div>
