Update VOCUS 2022-03-11 patch

--- a/_posts/2022-03-10-VOCUS-crimea-(漢譯-克里米亞-等)-與-殺人魔之地-或-鬼冤地-等的轉換密碼.html
+++ b/_posts/2022-03-10-VOCUS-crimea-(漢譯-克里米亞-等)-與-殺人魔之地-或-鬼冤地-等的轉換密碼.html
@@ -8,7 +8,7 @@ tags: blog
 author: 羅聖爾
 ---
 
-<div style="height:400px" class="image-block-prerender draft--imgNormal draft-block" data-src="https://images.vocus.cc/5dadb324-c995-4421-ab26-0a9d4d751ca0.jpg" data-width="1440" data-height="760" data-caption data-position="center"></div>
+<img src="https://images.vocus.cc/5dadb324-c995-4421-ab26-0a9d4d751ca0.jpg">
 <div class="draft-block draft--p left">
             <span style="font-weight: bold; ">
 1、Crimea = Crimeeaa 省一個 ea = Kill人魔E一A也 = 殺人魔屮一Λ一也 = 殺人魔㞢土也 = 殺人魔之地</span>，其中符號「㞢」爲漢字「之」的殷商甲骨文字體，符號「Λ一」的上下組合即漢字「土」的殷商甲骨文字體之一。
@@ -33,7 +33,8 @@ author: 羅聖爾
             Crimea 這個地名，在現代中文漢字裡大多音譯為語音漢字「克里米亞」或「克里木」等，幾乎看不出這個地名本來可能有警告外來者慎入的意思。所以，個人覺得，至少翻譯為「鬼里米亞」或「鬼里木」纔能稍微交待到一點類似 Crimea 的含義之一「鬼冤地」的警告作用，不過還是要看看當地的實際狀況纔知道，也許有機會朝向「<span style="font-weight: bold; ">快樂滿意地</span>」或「<span style="font-weight: bold; ">快樂眠安地</span>」的遠景發展也說不定。因爲，台灣有一處以鬼怪為主題的渡假村「妖怪村」，而筆者也曾經去那裡渡假過一次，感覺白天氣氛還滿歡樂的、到了夜晚又睡得很安心。<span style="font-weight: bold; ">(P.S. 參考：溪頭.松林町.妖怪村 -- </span><a href="http://www.xitou-kuma.tw/" target="_blank" class="draft--a"><span style="text-decoration: underline; font-weight: bold; ">http://www.xitou-kuma.tw</span></a><span style="font-weight: bold; ">)
 </span>
           </div>
-<div style="height:400px" class="image-block-prerender draft--imgNormal draft-block" data-src="https://images.vocus.cc/81e1a755-a2d8-47a4-b4c5-550066b49b50.jpg" data-width="2048" data-height="1536" data-caption="【附圖：台灣.南投.溪頭.松林町.妖怪村 / 筆者攝於公元 2015 年 】" data-position="center"></div>
+<img src="https://images.vocus.cc/81e1a755-a2d8-47a4-b4c5-550066b49b50.jpg" alt="【附圖：台灣.南投.溪頭.松林町.妖怪村 / 筆者攝於公元 2015 年 】">
+<div>【附圖：台灣.南投.溪頭.松林町.>妖怪村 / 筆者攝於公元 2015 年 】</div>
 <div class="draft-block draft--p left">
             以上所述，是從 Crimea 一字結合 Greek 傳說推演出來的字義，後來在公元 10 世紀以前的二百年間，Crimea 曾經被納入漢字文化之隋唐時代的史書中記載的「可薩突厥」或「突厥可薩」統治的一部份，也就是在更後世的漢字史書中所謂的「可薩汗國」(意通「可薩王國」等) 的勢力範圍中，所以也有人說 Crimea 一名又與漢字「可薩」這個名稱相關。
           </div>
@@ -53,7 +54,8 @@ author: 羅聖爾
             也就是說，漢字「可薩」不太可能是前述根據 Greek 傳說推敲出來的「殺人魔」之意，這些昔日的「可薩人」在過去以漢字「汗國」的形式存在之時，只是同時統治了一處他們自己也不知道地名含義的地方，甚至可能有部份的「可薩人」也成了 Crimea 當地的冤魂。<span style="font-weight: bold; ">(P.S. 漢字「汗國」又意通「王國」，但性質可能源自描述逐水草而居之生活型態的遊牧王國，所以古漢字文化可能將「王」字下方象徵「地」的符號「一」轉成意通「水」的符號「氵」並移到左偏旁的位置而變成「汗」字。#參考：【附圖：漢字「王」與「汗」的關係 / ……】)
 </span>
           </div>
-<div style="height:400px" class="image-block-prerender draft--imgNormal draft-block" data-src="https://images.vocus.cc/ab2fc3a7-4a1a-4a2d-82d0-474b4c78d69f.jpg" data-width="1440" data-height="760" data-caption="【附圖：漢字「王」與「汗」的關係 / 在古漢字文化的政治術語中，漢字「汗」或「可汗」多對應於 English 的 khan (國皇、冠皇、大皇、天王、天子) 而意通 king [天子；國官 (國管)；君；君於國 (國君)；國王；國王君；國主；帝；可汗]，但漢字「汗」或「可汗」多用於稱呼遊牧民族的領導者。】" data-position="center"></div>
+<img src="https://images.vocus.cc/ab2fc3a7-4a1a-4a2d-82d0-474b4c78d69f.jpg" alt="【附圖：漢字「王」與「汗」的關係 / 在古漢字文化的政治術語中，漢字「汗」或「可汗」多對應於 English 的 khan (國皇、冠皇、大皇、天王、天子) 而意通 king [天子；國官 (國管)；君；君於國 (國君)；國王；國王君；國主；帝；可汗]，但漢字「汗」或「可汗」多用於稱呼遊牧民族的領導者。】">
+<div>【附圖：漢字「王」與「汗」的關係 / 在古漢字文化的政治術語中，漢字「汗」或「可汗」多對應於 English 的 khan (國皇、冠皇、大皇、天王、天子) 而意通 king [天子；國官 (國管)；君；君於國 (國君)；國王；國王君；國主；帝；可汗]，但漢字「汗」或「可汗」多用於稱呼遊牧民族的領導者。】</div>
 <h2 class="draft-block draft--h2">
             
 P.S.
@@ -65,7 +67,7 @@ Crimean：Crimea人；Crimea言；Crimea的；Crimea之；Crimea樣。</span>現
 <div class="draft-block draft--p center">
             
           </div>
-<div class="embed-block-prerender" data-url="https://youtu.be/iP7VM0u7Bp4"></div>
+<iframe src="https://youtu.be/iP7VM0u7Bp4"></iframe>
 <div class="draft-block draft--p center">
             <a href="https://youtu.be/iP7VM0u7Bp4" target="_blank" class="draft--a"><span style="text-decoration: underline; font-weight: bold; ">https://youtu.be/iP7VM0u7Bp4</span></a>
           </div>
