--- a/_posts/2022-03-10-VOCUS-移民台灣速寫日記-尋找移民城市-台南魅力沒法擋.html
+++ b/_posts/2022-03-10-VOCUS-移民台灣速寫日記-尋找移民城市-台南魅力沒法擋.html
@@ -9,7 +9,7 @@ author: 天爸
 ---
 
 <div class="draft-block draft--p left">鐵定要移民台灣了，經過接近一年的觀察與考慮，我們已經定好落腳高雄或新竹。又因為高雄有捷運，對沒有開車經驗的我們來說會比較方便，所以我們以高雄為首選。但為何最終會移民台南呢？這是一個不太美麗的誤會，也必須先從我們的考量談起！</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/76bd1c5c-a747-4eb7-bad6-f354824e77d7.jpg" data-width="1200" data-height="628" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<img src="https://images.vocus.cc/76bd1c5c-a747-4eb7-bad6-f354824e77d7.jpg">
 <div class="draft-block draft--p left">我們從來沒有到過高雄的中崙華德福，只是向高雄的朋友打聽學校情況，以及用電郵了解學校的收生要求。在移民前三個月，天爸跟公司請假，先到高雄租房子及與學校洽談入學安排。高雄對我們來說非常陌生，我們只在2015年初到過一次高雄，坐捷運參觀這座城市。但既然已經決定了首選高雄，即使再陌生也得先有點規劃，所以在2015年5月到高雄視察環境，順便跟學校談談入學安排。可惜當機票與飯店都訂好之後，才收到學校告知已經額滿。</div>
 <div class="draft-block draft--p left">順其自然吧！</div>
 <div class="draft-block draft--p left">我們早在2015年初到過新竹寶山（今改名麗水）的招生說明會，當時的新竹寶山在寶山鄉的一個小型別墅社區之中，附近有些住宅區，用機車接載上下學也算方便。寶山也答應可以讓天一入讀。所以當天爸知道無緣高雄之後，也沒有任何不安，就往新竹寶山吧！只是早已訂好高雄的機票與飯店，就先在高雄休息兩三天再北上新竹吧。
