--- a/_posts/2022-03-10-INMEDIA-男子疑深夜持鎅刀行劫被捕-警稱晚上人少-籲市民自己小心.html
+++ b/_posts/2022-03-10-INMEDIA-男子疑深夜持鎅刀行劫被捕-警稱晚上人少-籲市民自己小心.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 男子疑深夜持鎅刀行劫被捕  警稱晚上人少 籲市民自己小心
+title: 男子疑深夜持鎅刀行劫被捕 警稱晚上人少 籲市民自己小心
 date: 2022-03-10 11:01:33.000000000 +00:00
 link: https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E7%94%B7%E5%AD%90%E7%96%91%E6%B7%B1%E5%A4%9C%E6%8C%81%E9%8E%85%E5%88%80%E8%A1%8C%E5%8A%AB%E8%A2%AB%E6%8D%95-%E8%AD%A6%E7%A8%B1%E6%99%9A%E4%B8%8A%E4%BA%BA%E5%B0%91-%E7%B1%B2%E5%B8%82%E6%B0%91%E8%87%AA%E5%B7%B1%E5%B0%8F%E5%BF%83
 categories: inmedia
@@ -8,14 +8,13 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/20220310PP.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>一間葵涌食店昨晚遭持鎅刀行劫，警方今早於長沙灣海麗邨拘捕一名35歲男子，經調查後懷疑他涉及4宗同類案件，疑觸犯兩項行劫罪及兩項企圖行劫罪。被問是否因為晚上禁堂食，食肆提早關門，晚上人流較少，從而引伸罪案發生。西九龍總區刑事部（行動）警司鍾雅倫鍾雅倫認為有可能，但強調行劫案數字未有明顯上升，提醒便利店及食肆職員多加警惕，「大家市民小心啲啦。」</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/20220310PP.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>一間葵涌食店昨晚遭持鎅刀行劫，警方今早於長沙灣海麗邨拘捕一名35歲男子，經調查後懷疑他涉及4宗同類案件，疑觸犯兩項行劫罪及兩項企圖行劫罪。被問是否因為晚上禁堂食，食肆提早關門，晚上人流較少，從而引伸罪案發生。西九龍總區刑事部（行動）警司鍾雅倫認為有可能，但強調行劫案數字未有明顯上升，提醒便利店及食肆職員多加警惕，「大家市民小心啲啦」。</p>
 <p>警方指，經翻查大量閉路電視片段及情報分析鎖定一名男子，並於今早作出埋伏拘捕行動。被捕男子之前為證券公司職員，數月前失業，現報稱無業，有抑鬱及輕微精神錯亂的精神病紀錄，現仍扣留調查。警方亦在疑犯住宅內檢獲一把鎅刀及犯案時的衣服。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/c96JpB" title="螢幕截圖 2022-03-10 18.04.02"><img src="https://live.staticflickr.com/65535/51928687142_3e8955ece8_z.jpg" width="640" alt="螢幕截圖 2022-03-10 18.04.02" /></a><br /><em>西九龍總區刑事部（行動）警司鍾雅倫</em></p>
-<p>西九龍總區刑事部（行動）警司鍾雅倫表示，4宗行劫案犯案手法類同，匪徒會於凌晨時份，在食肆或便利店在亮出一把15厘米長的鎅刀，指嚇店員，要求交出收銀機內的現金。4宗案件包括3間便利店及1間食肆，其中2間便利店有交出部份現金，合共涉及約2,500元，另外<br />
-2宗案件的店員沒有就範損失金錢。</p>
-<p>鍾雅倫提及，其中一宗發生於深水埗的案件，一名男子曾嘗試追捕疑犯而跌倒擦傷臉部，呼籲市民須顧及自身安全，不要高估自己能力，儘快報警處理，「今次就話一個賊啫，如果唔好彩仲有兩、三個喺出面，咁好大機會市民係會受傷。」</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/c96JpB" title="螢幕截圖 2022-03-10 18.04.02"><img src="https://live.staticflickr.com/65535/51928687142_3e8955ece8_z.jpg" width="640" alt="螢幕截圖 2022-03-10 18.04.02" /></a><br /><em>西九龍總區刑事部（行動）警司 鍾雅倫</em></p>
+<p>西九龍總區刑事部（行動）警司鍾雅倫表示，4宗行劫案犯案手法類同，匪徒會於凌晨時份，在食肆或便利店在亮出一把15厘米長的鎅刀，指嚇店員，要求交出收銀機內的現金。4宗案件包括3間便利店及1間食肆，其中2間便利店有交出部份現金，合共涉及約2,500元，另外2宗案件的店員沒有就範損失金錢。</p>
+<p>鍾雅倫提及，其中一宗發生於深水埗的案件，一名男子曾嘗試追捕疑犯而跌倒擦傷臉部，呼籲市民須顧及自身安全，不要高估自己能力，儘快報警處理：「今次就話一個賊啫，如果唔好彩仲有兩、三個喺出面，咁好大機會市民係會受傷。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/rdHFH5" title="螢幕截圖 2022-03-10 18.44.49"><img src="https://live.staticflickr.com/65535/51929680461_a6856cce3f_z.jpg" width="640" alt="螢幕截圖 2022-03-10 18.44.49" /></a></p>
 <p><strong>警證網上流傳影片屬實</strong></p>
 <p>網上今日有疑似相關影片流出，鍾雅倫承認為其中一宗案件。片中一名穿黑灰色間條上衣的男子昨晚近10時到一所食店光顧，店主兩度詢問男子「要河粉定米線？」該男子才回答米線，並給予店主一張100元鈔票。</p>
-<p>在店主入單及打開收銀機找贖期間，男子突然於左邊褲袋取出鎅刀聲言打劫，店主即時收起錢櫃，更「爆粗」稱：「X你個老母，打劫？」並走入廚房取出菜刀。男子見狀立刻逃離，店主一度跑出店內追截。</p>
+<p>在店主入單及打開收銀機找贖期間，男子突然於左邊褲袋取出鎅刀聲言打劫，店主即時收起錢櫃，更「爆粗」稱：「X你個老母，打劫？」，並走入廚房取出菜刀。男子見狀立刻逃離，店主一度跑出店內追截。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
